[package]
name = "firestore_grpc_cloudrun"
version = "0.1.1"
authors = ["Konosuke Kachi <github@s.k-kachi.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gkkachi/firestore-grpc-cloudrun"
documentation = "https://gkkachi.github.io/firestore-grpc-cloudrun"
description = """
A gRPC client library for Firestore, intended to run on Cloud Run.
"""
keywords = ["firebase", "firestore", "grpc", "gcp", "cloudrun"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firestore_grpc = "0.1"
futures = "0.3"
hyper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
